# baynext

./: .gitignore  docker-compose.yml
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  health.py  jobs.py  me.py
backend/app/api/v1/projects/: __init__.py  base.py
backend/app/api/v1/projects/[project_id]/: __init__.py  base.py  datasets.py  keys.py  pipelines.py
backend/app/core/: db.py  dependencies.py  exceptions.py  middleware.py  security.py  settings.py
backend/app/lib/: __init__.py  gcp.py
backend/app/models/: __init__.py  base.py  dataset.py  enums.py  membership.py  project.py  user.py
backend/app/routers/v1/: __init__.py  auth.py
backend/app/routers/v1/projects/: __init__.py  base.py
backend/app/routers/v1/projects/[project_id]/: __init__.py  base.py
backend/app/schemas/: dataset.py  job.py  key.py  pipeline.py  project.py  user.py
backend/app/services/: __init__.py  base.py  dataset.py  key.py  pipeline.py  project.py  user.py
backend/app/tasks/: train.py
backend/app/utils/: __init__.py
backend/app/validations/: datasets.py  model.py
backend/scripts/: cli.py  seed.py
backend/tests/: test_security.py
backend/tests/api/: test_base.py  test_datasets.py  test_health.py
backend/tests/core/: test_exceptions.py  test_middleware.py  test_settings.py
backend/tests/schemas/: test_dataset.py
frontend/: package-lock.json  package.json  (+1 more)
libs/baynext-py/: pyproject.toml
libs/baynext-py/src/baynext/: client.py  config.py  main.py
libs/baynext-py/src/baynext/commands/auth/: __init__.py  login.py
libs/baynext-py/src/baynext/commands/config/: set.py
libs/baynext-py/src/baynext/commands/datasets/: __init__.py  get.py  list.py  utils.py
libs/baynext-py/src/baynext/commands/projects/: __init__.py  create.py  delete.py  get.py
libs/baynext-py/src/baynext_py/: __init__.py  base.py
ml/: README.md  main.py  pyproject.toml
ml/cli/: training.py
ml/tests/training/: test_main.py
ml/training/: logger.py
ml/utils/: constants.py  enums.py
(+65 files in other folders)
