[project]
name = "baynext-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Léo Grosjean", email = "leo.grosjean@live.fr" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
]

[project.scripts]
baynext-py = "baynext_py:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
